...
        pastLabel.font = UIFont(name: fontLight, size: 18)
        pastLabel.textColor = .white
        pastLabel.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(pastLabel)

        noLocationLabel1 = UILabel()
        noLocationLabel1.text = "I need a location to do anything 🌎"
        noLocationLabel2 = UILabel()
        noLocationLabel2.text = "Enable location services or choose a city in Settings ↙"
        for label in [noLocationLabel1!, noLocationLabel2!] {
            label.font = UIFont(name: fontLight, size: 22)
            label.textColor = .white
            label.textAlignment = .center
...
